[FIX] site width wordCloud size too big

--- a/src/components/Profile/Profile.scss
+++ b/src/components/Profile/Profile.scss
@@ -143,10 +143,10 @@
             .responsibilities {
                 margin: 1em;
                 padding: 1em 1em;
-                // border-radius: 24px;
-                // box-shadow: 0 0 35px rgb(2 2 2 / 19%);
-                // background: rgba(76, 0, 255, 0.541);
 
+                >ul{
+                    padding: 0;
+                }
             }
 
             transition: 1s ease-in-out;
